--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,802 +1,1 @@
-@charset "UTF-8";
-.jelly-container {
-  width: var(--jelly-max-width, 1240px);
-  margin: 0 auto;
-  padding: 0 var(--jelly-side-width, 16px);
-  box-sizing: border-box;
-  position: relative;
-}
-
-.jelly-container-main {
-  display: flex;
-  margin: 32px 0;
-  gap: 48px;
-  clear: both;
-}
-
-.jelly-container-content {
-  flex: 0 0 auto;
-  width: 78%;
-  box-sizing: border-box;
-}
-.jelly-container-content h1 {
-  margin-top: 0;
-}
-
-.jelly-container-sidebar {
-  flex: 1 0 0%;
-}
-
-.jelly-container-grid {
-  box-sizing: border-box;
-  width: 100%;
-  display: grid;
-  gap: 24px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-}
-
-@media screen and (max-width: 1240px) {
-  .jelly-container {
-    width: 100%;
-  }
-  .jelly-container-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (max-width: 768px) {
-  .jelly-container-main {
-    gap: 16px;
-    flex-direction: column !important;
-  }
-  .jelly-container-content {
-    width: 100%;
-  }
-  .jelly-container-sidebar {
-    margin-top: 32px;
-    padding-top: 32px;
-    border-top: 1px solid var(--jelly-color-border);
-  }
-  .jelly-container-grid {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-  }
-}
-.alignleft {
-  float: left;
-  margin-right: 1rem;
-}
-
-.aligncenter {
-  clear: both;
-  display: block;
-  margin-inline: auto;
-}
-
-.alignright {
-  float: right;
-  margin-left: 1rem;
-}
-
-.wp-caption-text {
-  margin: 0;
-}
-
-.wp-caption {
-  margin-block-end: 1.25rem;
-  max-width: 100%;
-}
-.wp-caption img {
-  display: block;
-  margin-inline: auto;
-}
-.wp-caption .alignleft {
-  margin: 5px 20px 20px 0;
-}
-
-.navigation.pagination {
-  margin: 32px 0;
-  text-align: center;
-}
-.navigation.pagination .page-numbers,
-.navigation.pagination a.page-numbers {
-  border-radius: var(--jelly-border-radius-xs);
-  border: 1px solid var(--jelly-color-border);
-  min-width: 36px;
-  height: 36px;
-  text-align: center;
-  line-height: 36px;
-  display: inline-block;
-  color: var(--jelly-color-description);
-  font-size: 1em;
-  transition: none;
-  padding: 0 12px;
-  box-sizing: border-box;
-  margin: 8px 4px;
-}
-.navigation.pagination .page-numbers:hover,
-.navigation.pagination a.page-numbers:hover {
-  text-decoration: none;
-  background-color: var(--jelly-color-primary);
-  border-color: var(--jelly-color-primary);
-  color: var(--jelly-color-white);
-}
-.navigation.pagination .page-numbers.current {
-  background: var(--jelly-color-primary);
-  border-color: var(--jelly-color-primary);
-  color: var(--jelly-color-white);
-}
-
-.wp-block-image .aligncenter .wp-element-caption {
-  text-align: center;
-  font-size: 16px;
-  color: var(--jelly-color-description);
-}
-
-.jelly-404 {
-  width: 400px;
-  margin: 0 auto;
-  min-height: 600px;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 16px;
-}
-.jelly-404 .error-title {
-  font-size: 10rem;
-}
-.jelly-404 .error-description {
-  margin-bottom: 1rem;
-}
-
-.jelly-archive .jelly-container-main {
-  flex-direction: row-reverse;
-}
-
-.jelly-post article p {
-  color: var(--jelly-color-text);
-}
-.jelly-post article p a {
-  text-decoration: underline;
-}
-.jelly-post article p,
-.jelly-post article li {
-  line-height: 1.9;
-}
-.jelly-post article ul,
-.jelly-post article ol {
-  margin: 24px 0;
-}
-
-@media screen and (max-width: 767px) {
-  .jelly-404 {
-    width: 100%;
-  }
-  .jelly-404 .error-title {
-    font-size: 8rem;
-  }
-}
-@media (max-width: 480px) {
-  .jelly-404 .error-title {
-    font-size: 6rem;
-  }
-}
-/*
-* 搜索框
-*/
-.wp-theme-jelly-frame .jelly-search-form {
-  display: flex;
-  flex-wrap: nowrap;
-  position: relative;
-}
-.wp-theme-jelly-frame .jelly-search-form button {
-  line-height: 1;
-  background-color: transparent;
-  border: 0;
-  color: var(--jelly-color-description);
-  padding: 10px 14px 8px 14px;
-  height: 40px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.wp-theme-jelly-frame .jelly-search-form button:hover {
-  border-color: transparent;
-  background-color: transparent;
-  color: var(--jelly-color-title);
-}
-.wp-theme-jelly-frame .jelly-search-form input {
-  width: 100%;
-  font-size: 14px;
-  border-radius: var(--jelly-border-radius-sm);
-  background-color: #fff;
-  border-color: var(--jelly-color-border);
-  height: 40px;
-  padding: 8px 16px;
-}
-
-/*
-* 回到顶部按钮
-*/
-.jelly-totop {
-  position: fixed;
-  right: 48px;
-  bottom: 32px;
-  height: 46px;
-  width: 46px;
-  cursor: pointer;
-  display: block;
-  border-radius: 50px;
-  box-shadow: inset 0 0 0 2px var(--jelly-color-border);
-  z-index: 10000;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(15px);
-  transition: all 200ms linear;
-}
-.jelly-totop.active-progress {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-}
-.jelly-totop .arrow-up {
-  position: absolute;
-  text-align: center;
-  line-height: 46px;
-  font-size: 20px;
-  color: var(--jelly-color-text);
-  left: 11px;
-  top: 11px;
-  height: 24px;
-  width: 24px;
-  cursor: pointer;
-  display: block;
-  z-index: 1;
-  transition: all 200ms linear;
-}
-.jelly-totop .progress-circle path {
-  fill: #fff;
-  stroke: var(--jelly-color-primary);
-  stroke-width: 4;
-  box-sizing: border-box;
-  transition: all 200ms linear;
-}
-
-/*
-* 文章页 顶部 特色图片
-*/
-.jelly-post-thumbnail {
-  width: 100%;
-  max-width: unset;
-  height: auto;
-  max-height: 400px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
-  font-size: 0px;
-  line-height: 0;
-  vertical-align: top;
-}
-
-/*
-* 作者框
-*/
-.jelly-author-box {
-  background-color: var(--jelly-color-item-bg);
-  padding: 20px;
-  border-radius: var(--jelly-border-radius-lg);
-  margin: 32px 0;
-  gap: 24px;
-  display: flex;
-  align-items: center;
-}
-.jelly-author-box .author-avatar {
-  flex: 0 0 auto;
-}
-.jelly-author-box .avatar-img {
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  background-color: #ffffff;
-  border: 1px solid var(--jelly-color-border);
-}
-.jelly-author-box .author-name {
-  font-size: 24px;
-  color: var(--jelly-color-title);
-}
-.jelly-author-box .author-description {
-  font-size: 14px;
-  color: var(--jelly-color-text);
-  line-height: 1.5;
-}
-
-/*
-* 翻页按钮
-*/
-.jelly-post-navigation {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0;
-  padding: 24px 0;
-  border-top: 1px solid var(--jelly-color-border);
-  border-bottom: 1px solid var(--jelly-color-border);
-}
-.jelly-post-navigation a {
-  color: var(--jelly-color-primary);
-}
-.jelly-post-navigation .nav-next {
-  text-align: right;
-}
-
-/*
-* 元信息
-*/
-.jelly-single-post-categories {
-  color: var(--jelly-color-description);
-}
-.jelly-single-post-categories a {
-  font-size: 16px !important;
-  color: var(--jelly-color-primary);
-}
-
-.jelly-post-meta {
-  margin: 20px 0;
-  padding-bottom: 16px;
-  color: var(--jelly-color-description);
-  font-size: 16px;
-  border-bottom: 1px solid var(--jelly-color-border);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.jelly-post-meta .meta-left .release-date {
-  margin-right: 8px;
-}
-.jelly-post-meta .meta-left svg {
-  margin-right: 4px;
-  position: relative;
-  top: 4px;
-}
-.jelly-post-meta .jelly-share-buttons {
-  margin: 0;
-}
-
-/*
-* 分享按钮
-*/
-.jelly-share-buttons {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-  margin: 16px 0;
-}
-.jelly-share-buttons .share-title {
-  font-size: 14px;
-  color: var(--jelly-color-description);
-}
-.jelly-share-buttons .share-toggle {
-  border-radius: 50%;
-  width: 28px;
-  height: 28px;
-  border: 1px solid var(--jelly-color-border);
-  text-align: center;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.jelly-share-buttons .share-toggle:hover {
-  border-color: var(--jelly-color-primary);
-  background-color: var(--jelly-color-primary);
-  color: var(--jelly-color-white);
-}
-.jelly-share-buttons .share-toggle svg {
-  padding-top: 5px;
-}
-
-/*
-* 相关文章
-*/
-.jelly-related-posts {
-  width: 100%;
-  background-color: var(--jelly-color-item-bg);
-  text-align: center;
-  margin: 32px 0 0 0;
-  padding: 32px 0;
-}
-.jelly-related-posts .jelly-related-posts-list {
-  list-style: none;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  gap: 24px;
-}
-.jelly-related-posts .jelly-related-posts-list li {
-  flex: 1;
-  width: 100%;
-  box-sizing: border-box;
-}
-.jelly-related-posts .jelly-related-posts-list li h3 {
-  margin: 10px 0 0;
-  font-size: 16px;
-}
-.jelly-related-posts .jelly-related-posts-list a {
-  text-decoration: none;
-}
-.jelly-related-posts .jelly-related-post-thumbnail {
-  width: 100%;
-  height: 150px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  background-size: cover;
-  background-position: center;
-  display: block;
-  background-color: var(--jelly-color-white);
-  border-radius: 6px;
-}
-.jelly-related-posts .jelly-related-post-thumbnail.placeholder {
-  background-color: var(--jelly-color-description);
-}
-
-/*
-* 文章卡片
-*/
-.jelly-post-card {
-  width: 100%;
-  box-sizing: border-box;
-}
-.jelly-post-card .jelly-card-content {
-  padding: 20px 0;
-}
-.jelly-post-card .jelly-card-content p {
-  font-size: 1em;
-  color: var(--jelly-color-description);
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.jelly-post-card .jelly-card-thumbnail {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%;
-  overflow: hidden;
-  border-radius: 6px;
-}
-.jelly-post-card .jelly-card-thumbnail img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: transform 0.3s ease;
-}
-.jelly-post-card .jelly-card-thumbnail img:hover {
-  transform: scale(1.1);
-}
-.jelly-post-card .jelly-card-title {
-  font-size: 1.125rem;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-.jelly-post-card .jelly-card-title a {
-  color: var(--jelly-color-title);
-}
-.jelly-post-card .jelly-card-title a:hover {
-  color: var(--jelly-color-primary);
-}
-.jelly-post-card .jelly-card-meta {
-  font-size: 0.9em;
-  color: var(--jelly-color-description);
-  margin: 0;
-}
-.jelly-post-card .jelly-card-meta span {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-/*
-* 面包屑
-*/
-nav.jelly-rank-math-breadcrumb {
-  width: 100%;
-  border-top: 1px solid var(--jelly-color-border);
-  border-bottom: 1px solid var(--jelly-color-border);
-}
-nav.jelly-rank-math-breadcrumb p {
-  display: block;
-  width: var(--jelly-max-width, 1240px);
-  margin: 0 auto;
-  padding: 12px var(--jelly-side-width, 16px);
-  font-size: 14px;
-  line-height: 1.4;
-  color: var(--jelly-color-text);
-  box-sizing: border-box;
-}
-nav.jelly-rank-math-breadcrumb a {
-  color: var(--jelly-color-title);
-  text-decoration: underline;
-}
-nav.jelly-rank-math-breadcrumb a:hover {
-  color: var(--jelly-color-title);
-}
-nav.jelly-rank-math-breadcrumb .separator {
-  margin: 0 4px;
-}
-nav.jelly-rank-math-breadcrumb .last {
-  color: var(--jelly-color-description);
-}
-
-/*
-* 分类列表
-*/
-.jelly-archive-categories {
-  margin: 24px 0;
-}
-.jelly-archive-categories .categories-title {
-  font-size: 16px;
-  margin-bottom: 18px;
-}
-.jelly-archive-categories .categories-list {
-  list-style: none;
-  padding: 0;
-  font-size: 14px;
-  max-height: 400px;
-  overflow-y: auto;
-}
-.jelly-archive-categories .categories-list::-webkit-scrollbar {
-  width: 3px;
-}
-.jelly-archive-categories .categories-list::-webkit-scrollbar-track {
-  background-color: var(--jelly-color-border);
-}
-.jelly-archive-categories .categories-list::-webkit-scrollbar-thumb {
-  background-color: var(--jelly-color-description);
-}
-.jelly-archive-categories .categories-list li {
-  margin: 0;
-  border-bottom: 1px solid var(--jelly-color-border);
-  padding: 12px;
-}
-.jelly-archive-categories .categories-list li.active {
-  background: var(--jelly-color-item-bg);
-}
-.jelly-archive-categories .categories-list li.active a {
-  color: var(--jelly-color-primary);
-  font-weight: 600;
-}
-.jelly-archive-categories .categories-list a {
-  color: var(--jelly-color-description);
-}
-
-/*
-* 全局表单
-*/
-.jelly-global-form {
-  margin: 24px 0;
-}
-.jelly-global-form .form-title {
-  font-size: 16px;
-  margin-bottom: 18px;
-}
-
-@media (max-width: 1240px) {
-  .jelly-content-table {
-    overflow-x: auto;
-    display: block;
-    width: 100%;
-  }
-  .jelly-content-table table {
-    width: 100%;
-    display: block;
-    white-space: nowrap;
-  }
-}
-@media screen and (max-width: 1240px) {
-  nav.jelly-rank-math-breadcrumb p {
-    width: 100%;
-  }
-  .jelly-archive-categories .categories-list {
-    font-size: 16px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .jelly-totop {
-    right: 48px;
-    bottom: 48px;
-  }
-  .jelly-totop.active-progress {
-    transform: scale(1.1) translateY(0);
-  }
-  .jelly-related-posts .jelly-related-posts-list {
-    flex-direction: column;
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-#gt_float_wrapper {
-  position: relative !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  min-width: 96px;
-  min-height: 34px;
-}
-
-.gtranslate_wrapper {
-  position: relative !important;
-  min-width: 96px;
-  min-height: 34px;
-}
-.gtranslate_wrapper .gt_float_wrapper {
-  position: relative !important;
-}
-.gtranslate_wrapper .gt_float_switcher {
-  box-shadow: none;
-  position: relative !important;
-  border: 1px solid var(--jelly-color-border);
-  border-radius: var(--jelly-border-radius-lg);
-  overflow: visible;
-  background: transparent;
-  padding: 4px 12px;
-  min-width: 96px;
-  min-height: 34px;
-  box-sizing: border-box;
-  color: var(--jelly-color-title);
-}
-.gtranslate_wrapper .gt_float_switcher:hover {
-  border-color: var(--jelly-color-border-secondary);
-}
-.gtranslate_wrapper .gt_float_switcher .gt_options {
-  position: absolute;
-  top: 48px;
-  background: var(--jelly-color-white);
-  right: 0;
-  min-width: 200px;
-  box-shadow: var(--jelly-box-shadow);
-  max-height: 362px;
-  border: 1px solid var(--jelly-color-border);
-}
-.gtranslate_wrapper .gt_float_switcher .gt-selected .gt-current-lang {
-  padding: 0;
-  font-size: 14px;
-}
-.gtranslate_wrapper .gt_float_switcher,
-.gtranslate_wrapper .gt_float_switcher .gt-selected {
-  background: 0 0;
-}
-.gtranslate_wrapper .gt_float_switcher img {
-  width: 18px;
-  height: 13.5px;
-  overflow: hidden;
-}
-.gtranslate_wrapper .gt_float_switcher .gt_options::-webkit-scrollbar-track {
-  background-color: var(--jelly-color-item-bg);
-}
-.gtranslate_wrapper .gt_float_switcher .gt_options::-webkit-scrollbar-thumb {
-  background-color: var(--jelly-color-description);
-}
-.gtranslate_wrapper .gt_float_switcher .gt_options a {
-  transition: none;
-  font-size: 14px;
-}
-.gtranslate_wrapper .gt_float_switcher .gt_options a:hover {
-  color: var(--jelly-color-title);
-  background-color: var(--jelly-color-item-bg);
-}
-
-html[dir=rtl] .gtranslate_wrapper .gt_float_switcher .gt_options {
-  right: unset;
-  left: 0;
-}
-
-nav.rank-math-breadcrumb p {
-  margin: 0;
-}
-
-#rank-math-faq {
-  background-color: var(--jelly-color-item-bg);
-  padding: 16px;
-  border-radius: var(--jelly-border-radius-sm);
-}
-
-.rank-math-list-item {
-  background-color: var(--jelly-color-white);
-  padding: 16px;
-  border-radius: var(--jelly-border-radius-sm);
-  margin-bottom: 12px;
-  box-shadow: var(--jelly-box-shadow);
-}
-.rank-math-list-item .rank-math-question {
-  font-size: 1.44rem;
-  padding-bottom: 12px;
-  margin-top: 0;
-  border-bottom: 1px solid var(--jelly-color-border);
-}
-.rank-math-list-item:last-child {
-  margin-bottom: 0;
-}
-
-.wp-block-rank-math-toc-block {
-  position: sticky;
-  top: 100px;
-  max-height: calc(100% - 200px);
-  overflow-y: auto;
-  margin: 24px 0;
-}
-.wp-block-rank-math-toc-block h2 {
-  font-weight: 600;
-  font-size: 16px !important;
-  position: relative;
-  margin-bottom: 18px;
-  margin-top: 0;
-}
-.wp-block-rank-math-toc-block nav {
-  padding-left: 8px;
-  max-height: 400px;
-  overflow-y: auto;
-}
-.wp-block-rank-math-toc-block nav::-webkit-scrollbar {
-  width: 3px;
-}
-.wp-block-rank-math-toc-block nav::-webkit-scrollbar-track {
-  background-color: var(--jelly-color-border);
-}
-.wp-block-rank-math-toc-block nav::-webkit-scrollbar-thumb {
-  background-color: var(--jelly-color-description);
-}
-.wp-block-rank-math-toc-block nav > ul {
-  padding-left: 18px;
-  padding-right: 8px;
-  border-left: 1px solid var(--jelly-color-border);
-}
-.wp-block-rank-math-toc-block nav > ul > li {
-  padding-left: 16px;
-}
-.wp-block-rank-math-toc-block nav > ul > li::before {
-  content: "";
-  display: block;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background: var(--jelly-color-text);
-  position: absolute;
-  left: -5px;
-  top: 12px;
-}
-.wp-block-rank-math-toc-block nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.wp-block-rank-math-toc-block nav li {
-  margin: 0;
-  padding-left: 0;
-  position: relative;
-  margin: 6px 0;
-}
-.wp-block-rank-math-toc-block nav a {
-  color: var(--jelly-color-text);
-  font-size: 14px;
-}
-
-@media screen and (max-width: 767px) {
-  #rank-math-faq {
-    padding: 0;
-    background-color: none;
-    border-radius: none;
-  }
-  .wp-block-rank-math-toc-block {
-    position: relative;
-    top: unset;
-  }
-  .wp-block-rank-math-toc-block nav {
-    max-height: 300px;
-  }
-  .wp-block-rank-math-toc-block h2 {
-    padding: 8px;
-    background: var(--jelly-color-item-bg);
-  }
-}/*# sourceMappingURL=theme.css.map */
+/*# sourceMappingURL=theme.css.map */
