--- a/assets/dev/footer.scss
+++ b/assets/dev/footer.scss
@@ -2,19 +2,27 @@
     margin-top: 36px;
     background-color: #0a0d14;
     color: #cccccc;
-    .footer-logo{
+    .site-name {
+        font-weight: 600;
+        font-size: 2.5em;
+        color: inherit;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+    .footer-logo {
         width: 100%;
         display: flex;
-        padding:48px 0 24px 0;
+        justify-content: space-between;
+        padding: 48px 0 24px 0;
         border-bottom: 1px solid #2d323f;
-        a{
+        a {
             display: block;
         }
-        img{
+        img {
             height: 64px;
             width: 100%;
         }
-        
     }
     .footer-content {
         display: flex;
@@ -38,9 +46,8 @@
             // color: #b8b8b8;
             .current-menu-item {
                 a {
-                    color: #fff;
+                    color: var(--jelly-color-primary);
                     font-weight: 600;
-                    text-decoration: underline;
                 }
             }
             a {
@@ -50,7 +57,7 @@
                 }
             }
         }
-        .footer-item-hr{
+        .footer-item-hr {
             width: 50px;
             height: 3px;
             display: block;
@@ -66,7 +73,7 @@
     }
 }
 @media screen and (max-width: 768px) {
-    .site-footer{
+    .site-footer {
         .footer-content {
             flex-direction: column;
             gap: 0;
