--- a/assets/dev/page.scss
+++ b/assets/dev/page.scss
@@ -1,6 +1,6 @@
-.jelly-404 {
+.error-page {
     width: 400px;
-    margin: 0 auto;
+    margin: 32px auto;
     min-height: 600px;
     text-align: center;
     box-sizing: border-box;
@@ -12,14 +12,19 @@
         margin-bottom: 1rem;
     }
 }
-.jelly-archive{
-    .jelly-container-main{
+
+.archive-page {
+    .container.primary {
         flex-direction: row-reverse;
     }
+    .archive-description {
+        margin-bottom: 16px;
+    }
 }
-.jelly-post article {
+
+.post-page .post {
     p {
-        color: var(--jelly-color-text);
+        // color: var(--jelly-color-text);
         a {
             text-decoration: underline;
         }
@@ -35,7 +40,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .jelly-404 {
+    .error-page {
         width: 100%;
         .error-title {
             font-size: 8rem;
@@ -44,7 +49,7 @@
 }
 
 @media (max-width: 480px) {
-    .jelly-404 {
+    .error-page {
         .error-title {
             font-size: 6rem;
         }
