--- a/assets/dev/wordpress.scss
+++ b/assets/dev/wordpress.scss
@@ -35,6 +35,7 @@
 .navigation.pagination {
     margin: 32px 0;
     text-align: center;
+    position: relative;
     .page-numbers,
     a.page-numbers {
         border-radius: var(--jelly-border-radius-xs);
@@ -50,11 +51,22 @@
         padding: 0 12px;
         box-sizing: border-box;
         margin: 8px 4px;
+
         &:hover {
             text-decoration: none;
             background-color: var(--jelly-color-primary);
             border-color: var(--jelly-color-primary);
             color: var(--jelly-color-white);
+        }
+        &.prev {
+            position: absolute;
+            margin: 0;
+            left: 0;
+        }
+        &.next {
+            position: absolute;
+            margin: 0;
+            right: 0;
         }
     }
     .page-numbers.current {
