--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ h6 {
   line-height: 1.3;
   font-weight: 600;
   margin: 12px 0;
+  overflow-wrap: break-word;
 }
 
 h1 {
@@ -343,6 +344,10 @@ pre {
   font-family: monospace, monospace;
   font-size: 1em;
   white-space: pre-wrap;
+  overflow: auto;
+  max-width: 100%;
+  padding: 16px;
+  background-color: var(--jelly-color-item-bg);
 }
 
 code {
