--- a/assets/dev/footer.scss
+++ b/assets/dev/footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-    margin-top: 36px;
+    // margin-top: 36px;
     background-color: #0a0d14;
     color: #cccccc;
     .site-name {
