--- a/assets/dev/header.scss
+++ b/assets/dev/header.scss
@@ -25,6 +25,7 @@
         img {
             height: 60px;
             width: 100%;
+            object-fit: contain;
         }
     }
     .jelly-container {
