--- a/assets/dev/layout.scss
+++ b/assets/dev/layout.scss
@@ -15,14 +15,28 @@
         // width: 100%;
         min-width: 0;
         box-sizing: border-box;
-        .entry-title {
+        .entry-title,.page-title{
             margin-top: 0;
             margin-bottom: 24px;
         }
     }
     .sidebar {
-        min-width: 200px;
-        // flex: 0 0 auto; /* 不扩展，宽度由内容或设定的宽度决定 */
+        width: 240px;
+        flex: 0 0 auto; /* 不扩展，宽度由内容或设定的宽度决定 */
+        h2,h3,h4{
+            font-size: 20px !important;
+            text-transform: capitalize;
+            // padding: 8px 12px;
+            box-sizing: border-box;
+            &::after{
+                content: '';
+                display: block;
+                height: 3px;
+                width: 30%;
+                margin-top: 12px;
+                background-color: var(--jelly-color-primary);
+            }
+        }
     }
 }
 
@@ -42,6 +56,7 @@
     .loop-gird {
         grid-template-columns: repeat(2, 1fr);
     }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -51,7 +66,9 @@
         .content {
             width: 100%;
         }
+        
         .sidebar {
+            width: 100%;
             margin-top: 32px;
             padding-top: 32px;
             border-top: 1px solid var(--jelly-color-border);
