--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -150,6 +150,7 @@
         line-height: 1;
         display: flex;
         align-items: center;
+        text-transform: uppercase;
     }
     svg {
         padding-right: 8px;
@@ -157,7 +158,6 @@
     a {
         color: var(--jelly-color-text);
         &:hover {
-            text-decoration: none;
             color: var(--jelly-color-primary);
         }
     }
@@ -241,13 +241,13 @@
 /*
 * 相关文章
 */
-.jelly-related-posts {
+.related-posts {
     width: 100%;
     background-color: var(--jelly-color-item-bg);
     text-align: center;
     margin: 32px 0 0 0;
     padding: 32px 0;
-    .jelly-related-posts-list {
+    .related-posts-list {
         list-style: none;
         padding: 0;
         display: grid;
@@ -262,9 +262,6 @@
                 margin: 10px 0 0;
                 font-size: 16px;
             }
-        }
-        a {
-            text-decoration: none;
         }
     }
     .jelly-related-post-thumbnail {
@@ -346,7 +343,6 @@
 * 面包屑
 */
 nav.breadcrumb {
-    width: 100%;
     border-top: 1px solid var(--jelly-color-border);
     border-bottom: 1px solid var(--jelly-color-border);
     p {
@@ -374,34 +370,45 @@ nav.breadcrumb {
     }
 }
 
-/*
-* 分类列表
-*/
-.jelly-archive-categories {
-    margin: 24px 0;
+.categories-widget {
+    // margin: 24px 0;
     .categories-title {
-        font-size: 16px;
         margin-bottom: 18px;
     }
-    .categories-list {
+    ul {
         list-style: none;
         padding: 0;
+        margin: 0;
+    }
+    li {
+        margin: 0;
+        padding: 0;
+    }
+}
+
+.post-categories {
+    &:hover .categories-list::-webkit-scrollbar-thumb {
+        background-color: var(--jelly-color-primary);
+    }
+    .categories-list {
         font-size: 14px;
         max-height: 400px;
         overflow-y: auto;
+
         &::-webkit-scrollbar {
             width: 3px;
         }
         &::-webkit-scrollbar-track {
-            background-color: var(--jelly-color-border);
+            background-color: #e5e5e5;
         }
         &::-webkit-scrollbar-thumb {
-            background-color: var(--jelly-color-description);
+            background-color: #999;
         }
+
         li {
             margin: 0;
             border-bottom: 1px solid var(--jelly-color-border);
-            padding: 12px;
+
             &.active {
                 background: var(--jelly-color-primary);
                 a {
@@ -411,7 +418,12 @@ nav.breadcrumb {
             }
         }
         a {
+            display: block;
+            padding: 8px 12px;
             color: var(--jelly-color-description);
+            &:hover {
+                color: var(--jelly-color-primary);
+            }
         }
     }
 }
@@ -451,7 +463,7 @@ nav.breadcrumb {
             color: var(--jelly-color-primary);
         }
     }
-    .contact-text{
+    .contact-text {
         margin: 0;
     }
 }
@@ -469,8 +481,8 @@ nav.breadcrumb {
     }
     li {
         margin: 0;
-        &.current_page_item{
-            a{
+        &.current_page_item {
+            a {
                 color: var(--jelly-color-primary);
             }
         }
@@ -483,7 +495,6 @@ nav.breadcrumb {
         font-weight: 600;
         color: var(--jelly-color-title);
         &:hover {
-            text-decoration: none;
             color: var(--jelly-color-primary);
         }
     }
@@ -501,10 +512,10 @@ nav.breadcrumb {
     }
 }
 
-.social-media{
+.social-media {
     display: flex;
     align-items: center;
-    .social-item{
+    .social-item {
         display: block;
         padding: 8px;
         font-size: 18px;
@@ -513,8 +524,7 @@ nav.breadcrumb {
         color: inherit;
         line-height: 1;
         margin-left: 12px;
-        &:hover{
-            text-decoration: none;
+        &:hover {
             background-color: var(--jelly-color-primary);
         }
     }
@@ -535,39 +545,15 @@ nav.breadcrumb {
 }
 
 @media screen and (max-width: 1240px) {
-    nav.jelly-rank-math-breadcrumb p {
+    nav.breadcrumb p {
         width: 100%;
     }
-    .jelly-archive-categories {
-        .categories-list {
-            font-size: 16px;
+    .primary-menu {
+        .menu-list{
+            display: none;
         }
-    }
-    .jelly-menu {
-        width: 100%;
-        background-color: #fff;
         .menu-toggle {
             display: block;
-        }
-        .menu-list {
-            width: 100%;
-            height: 100%;
-            display: block;
-            margin-left: 20%;
-            // flex-direction: column;
-            background-color: #fff;
-            box-shadow: var(--jelly-box-shadow);
-            a {
-                width: 100%;
-            }
-        }
-        .menu-container {
-            position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.5);
         }
     }
 }
