--- a/assets/fonts/remixicon/remixicon.less
+++ b/assets/fonts/remixicon/remixicon.less
@@ -8,12 +8,12 @@
 
 @font-face {
     font-family: "remixicon";
-    src: url('remixicon.eot?t=1746459172041'); /* IE9*/
-    src: url('remixicon.eot?t=1746459172041#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url("remixicon.woff2?t=1746459172041") format("woff2"),
-    url("remixicon.woff?t=1746459172041") format("woff"),
-    url('remixicon.ttf?t=1746459172041') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('remixicon.svg?t=1746459172041#remixicon') format('svg'); /* iOS 4.1- */
+    src: url('remixicon.eot?t=1746514992905'); /* IE9*/
+    src: url('remixicon.eot?t=1746514992905#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url("remixicon.woff2?t=1746514992905") format("woff2"),
+    url("remixicon.woff?t=1746514992905") format("woff"),
+    url('remixicon.ttf?t=1746514992905') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('remixicon.svg?t=1746514992905#remixicon') format('svg'); /* iOS 4.1- */
     font-display: swap;
 }
 
@@ -48,10 +48,12 @@
 .ri-phone-line:before { content: "\efec"; }
 .ri-smartphone-line:before { content: "\f15a"; }
 .ri-earth-fill:before { content: "\ec79"; }
+.ri-globe-fill:before { content: "\edd0"; }
 .ri-arrow-up-s-line:before { content: "\ea78"; }
 .ri-calendar-schedule-line:before { content: "\f3f3"; }
 .ri-timer-line:before { content: "\f215"; }
 .ri-twitter-line:before { content: "\f23b"; }
+.ri-twitter-x-line:before { content: "\f3e7"; }
 .ri-facebook-line:before { content: "\ecbd"; }
 .ri-linkedin-fill:before { content: "\eeb5"; }
 .ri-search-line:before { content: "\f0d1"; }
@@ -59,4 +61,6 @@
 .ri-instagram-line:before { content: "\ee66"; }
 .ri-youtube-line:before { content: "\f2d5"; }
 .ri-whatsapp-line:before { content: "\f2bc"; }
+.ri-corner-down-right-line:before { content: "\f309"; }
+.ri-tiktok-line:before { content: "\f373"; }
 }
